# mtm

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
CAMRA/: ARM_calculation.py  README.md  sr_annualLastMinedMetrics.py
CAMRA/Archive/: 2021-03-09_comprehensiveProcessing_noEcoregion_noLastMined.ipynb  2021-03-09_comprehensiveProcessing_withEcoregion_noLastMined.ipynb  2021-03-09_comprehensiveProcessing_withEcoregion_withLastMined.ipynb  2021-03-09_sr_annualLastMinedMetrics.ipynb
Canopy_Height/: README.md
Canopy_Height/code/: ch_variables.py  mount.py
Canopy_Height/data/: TN_27_County_B1.csv  TN_27_County_B2.csv  TN_27_County_B3.csv  VA_NRCS_South_Central_B1.csv  VA_R3_Southwest_A.csv  WV_HQ_B1.csv  WV_HQ_B2.csv  WV_HQ_B3.csv  WV_R3_East.csv  WV_R3_Southcentral_B1.csv  WV_R3_Southcentral_B3.csv  WV_R3_Southcentral_B4.csv  anderson.csv  bell.csv  boone.csv  boyd.csv  breathitt.csv  buchanan.csv  cabell.csv  campbell.csv  carter.csv  claiborne.csv  clay.csv  clay_ky.csv  clinton.csv  cumberland.csv  dickenson.csv  elliott.csv  estill.csv  fayette.csv  fentress.csv  floyd.csv  greenbrier.csv  greenup.csv  harlan.csv  jackson.csv  johnson.csv  kanawha.csv  knott.csv  knox.csv  (+45 more)
Highwall_Detection/: README.md
MTM2018_Archive/: README.md
MTM_Annual_Extent/: README.md  mask_creation.py  variables.py
Post-mining_Recovery/: README.md
database/: README.md  api_test.py  append_tables.py  make_tables.py  make_views.py  prepare_db.py
docs/: Mining API Guide.ipynb  pull_request_template.md
mtm_utils/: cloud_sql_utils.py  variables.py
(+80 files in other folders)
